@@ -39,6 +39,18 @@ static unsigned short n_aps;
 static bool updating;
 bool error = true;
 
+struct rest_net_names_context
+{
+	/**
+	 * @brief The response.
+	 */
+	char *response;
+	/**
+	 * @brief The number of bytes to send.
+	 */
+	size_t size;
+};
+
 static char ICACHE_FLASH_ATTR *json_create_string_array(char **values, size_t entries)
 {
 	size_t i;
@@ -174,9 +186,8 @@ static void scan_done_cb(void *arg, STATUS status)
 	updating = false;
 }
 
-static size_t create_response(struct http_request *request)
+static void create_response(struct http_request *request)
 {
-	char *response = NULL;
 	unsigned short i;
 	    
     debug("Creating network names REST response.\n");
@@ -185,7 +196,8 @@ static size_t create_response(struct http_request *request)
 	{
 		if (n_aps && ap_ssids)
 		{
-			response = json_create_string_array(ap_ssids, n_aps);
+			((struct rest_net_names_context *)request->response.context)->response = json_create_string_array(ap_ssids, n_aps);
+			((struct rest_net_names_context *)request->response.context)->size = os_strlen(((struct rest_net_names_context *)request->response.context)->response);
 			//Free old data if there is any.
 			for (i = 0; i < n_aps; i++)
 			{
@@ -212,14 +224,6 @@ static size_t create_response(struct http_request *request)
 			}				
 		}
 	}
-	if (!response)
-	{
-		response = db_malloc(sizeof(char) * 3, "ret rest_net_names_html");
-		os_memcpy(response, "[]\0", sizeof(char) * 3);
-	}
-	request->response.context = response;
-	//Get the size of the message.
-	return(os_strlen(response));
 }
 
 /**
@@ -231,16 +235,23 @@ static size_t create_response(struct http_request *request)
 size_t ICACHE_FLASH_ATTR rest_net_names_head_handler(struct http_request *request)
 {
 	char str_size[16];
-	size_t size;
 	
 	//If the send buffer is over 200 bytes, this should never fill it.
 	debug("REST network names HEAD handler.\n");
-	size = create_response(request);
 	switch(request->response.state)
 	{
-		case HTTP_STATE_STATUS:  http_send_status_line(request->connection, request->response.status_code);
-								 //Onwards
-								 request->response.state = HTTP_STATE_HEADERS;
+		case HTTP_STATE_STATUS:  //Start scanning until a response is ready.
+								 if (!((struct rest_net_names_context *)request->response.context)->response)
+								 {
+									 create_response(request);
+								 }
+								 else
+								 {
+									 //Start sending the response.									 
+									 http_send_status_line(request->connection, request->response.status_code);
+									 //Onwards
+									 request->response.state = HTTP_STATE_HEADERS;
+								 }
 								 break;
 		case HTTP_STATE_HEADERS: //Always send connections close and server info.
 								 http_send_header(request->connection, 
@@ -250,7 +261,7 @@ size_t ICACHE_FLASH_ATTR rest_net_names_head_handler(struct http_request *reques
 												  "Server",
 												  HTTP_SERVER_NAME);
 								 //Get data size.
-								 os_sprintf(str_size, "%d", size);
+								 os_sprintf(str_size, "%d", ((struct rest_net_names_context *)request->response.context)->size);
 								 //Send message length.
 								 http_send_header(request->connection, 
 												  "Content-Length",
@@ -281,10 +292,14 @@ size_t ICACHE_FLASH_ATTR rest_net_names_head_handler(struct http_request *reques
  */
 size_t ICACHE_FLASH_ATTR rest_net_names_get_handler(struct http_request *request)
 {
-	size_t msg_size = 0;
+	struct rest_net_names_context context;
 	char *uri = request->uri;
 	    
     debug("In network names REST handler (%s).\n", uri);
+
+	context.response = NULL;
+	context.size = 0;
+	request->response.context = &context;
 	
 	//Don't duplicate, just call the head handler.
 	if (request->response.state < HTTP_STATE_MESSAGE)
@@ -293,13 +308,14 @@ size_t ICACHE_FLASH_ATTR rest_net_names_get_handler(struct http_request *request
 	}
 	else
 	{
-		msg_size = os_strlen(request->response.context);
-		debug(" Response: %s.\n", (char *)request->response.context);
-		tcp_send(request->connection, request->response.context, msg_size);
+		debug(" Response: %s.\n", ((struct rest_net_names_context *)request->response.context)->response);
+		tcp_send(request->connection, 
+				 ((struct rest_net_names_context *)request->response.context)->response,
+				 ((struct rest_net_names_context *)request->response.context)->size);
 		request->response.state = HTTP_STATE_ASSEMBLED;
 		
-		debug(" Response size: %d.\n", msg_size);
-		return(msg_size);
+		debug(" Response size: %d.\n", ((struct rest_net_names_context *)request->response.context)->size);
+		return(((struct rest_net_names_context *)request->response.context)->size);
 	}
 	return(0);
 }
@@ -311,8 +327,8 @@ size_t ICACHE_FLASH_ATTR rest_net_names_get_handler(struct http_request *request
  */
 void ICACHE_FLASH_ATTR rest_net_names_destroy(struct http_request *request)
 {
-	if (request->response.context)
+	if (((struct rest_net_names_context *)request->response.context)->response)
 	{
-		db_free(request->response.context);
+		db_free(((struct rest_net_names_context *)request->response.context)->response);
 	}
 }
